-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs24
-
Component/s: hotspot
-
b21
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2229150 | 8 | Vladimir Kozlov | P3 | Resolved | Fixed | b54 |
| JDK-8017967 | 7u45 | Vladimir Kozlov | P3 | Closed | Fixed | b01 |
| JDK-8002813 | 7u40 | Vladimir Kozlov | P3 | Closed | Fixed | b01 |
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (C:\jprt\T\P1\170446.vkozlov\s\src\share\vm\opto\node.cpp:326), pid=8864, tid=5688
# assert(_in[req-1] == this) failed: Must pass arg count to 'new'
#
- backported by
-
JDK-2229150 assert(_in[req-1] == this) failed: Must pass arg count to 'new'
-
- Resolved
-
-
JDK-8002813 assert(_in[req-1] == this) failed: Must pass arg count to 'new'
-
- Closed
-
-
JDK-8002814 assert(_in[req-1] == this) failed: Must pass arg count to 'new'
-
- Closed
-
-
JDK-8002815 assert(_in[req-1] == this) failed: Must pass arg count to 'new'
-
- Closed
-
-
JDK-8017967 assert(_in[req-1] == this) failed: Must pass arg count to 'new'
-
- Closed
-
- relates to
-
JDK-7200264 7192963 changes disabled shift vectors
-
- Resolved
-
-
JDK-7192964 assert(false) failed: bad AD file
-
- Closed
-
-
JDK-6340864 Implement vectorization optimizations in hotspot-server
-
- Resolved
-