7192963: assert(_in[req-1] == this) failed: Must pass arg count to 'new'

Fixed Pack node generation. Not vectorize shift instructions if count is not the same for all shifts and if count is vector.

Reviewed-by: twisti